reduced using of slow current_thd/current_lex macro initialization of item_thd moved to constructor (in any case we need thd in constructor) initialization of group_concat_max_len to constructor to avoid incorrect length reporting (BUG#757) removed Item_func_group_concat::fix_length_and_dec() because item have its own fix_fields and will not have inherited items

mysql-test/r/func_gconcat.result:
  test for BUG#757
mysql-test/t/func_gconcat.test:
  test for BUG#757
sql/item_sum.cc:
  reduced using of slow current_thd/current_lex macro
  initialization of item_thd moved to constructor (in any case we need thd in constructor)
  initialization of group_concat_max_len to constructor to avoid incorrect length reporting (BUG#757)
sql/item_sum.h:
  removed Item_func_group_concat::fix_length_and_dec() because item have its own fix_fields and will not have inherited items